--- a/css/main.css
+++ b/css/main.css
@@ -1,90 +1,3 @@
-
-/* ===================================================================
- * # footer
- *
- * ------------------------------------------------------------------- */
-footer {
-    padding: 9rem 0 6rem;
-    font-family: "montserrat-light", sans-serif;
-    font-size: 15px;
-    line-height: 2;
-    text-align: center;
-    color: rgba(255, 255, 255, 0.3);
-}
-
-footer h4 {
-    color: #FFFFFF;
-    font-size: 1.6rem;
-    line-height: 1.313;
-    margin-top: 0;
-    margin-bottom: 3.6rem;
-}
-
-footer a {
-    color: #FFFFFF;
-}
-
-footer a:hover, footer a:focus, footer a:active {
-    color: #0ab289;
-}
-
-footer .row {
-    max-width: 980px;
-}
-
-
-/* ---------------------------------------------------------------
- * ## footer main
- * --------------------------------------------------------------- */
-.footer-main {
-    text-align: left;
-}
-
-.footer-main .left {
-    padding-right: 40px;
-}
-
-.footer-main .right {
-    padding-left: 40px;
-}
-
-.footer-logo {
-    background: url("../images/logos_logo-rb.png") no-repeat center;
-
-}
-
-/* -------------------------------------------------------------------
- * ## go to top
- * ------------------------------------------------------------------- */
-.go-top {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    z-index: 600;
-    display: none;
-}
-
-.go-top a, .go-top a:visited {
-    text-decoration: none;
-    border: 0 none;
-    display: block;
-    height: 60px;
-    width: 60px;
-    line-height: 60px;
-    text-align: center;
-    background: black;
-    color: rgba(255, 255, 255, 0.5);
-    text-align: center;
-    text-transform: uppercase;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
-
-.go-top a i, .go-top a:visited i {
-    font-size: 18px;
-    line-height: inherit;
-}
-
-.go-top a:hover, .go-top a:focus {
-    color: #FFFFFF;
+html {
+    font-size: 10px;
 }
