--- a/css/main.css
+++ b/css/main.css
@@ -216,7 +216,7 @@ input[type="button"] {
     line-height: calc(5.4rem - .4rem);
     padding: 0 3rem;
     margin: 0 .3rem 1.2rem 0;
-    color: #fecf03;
+    color: #03fecf;
     text-decoration: none;
     text-align: center;
     white-space: nowrap;
